@@ -62,10 +62,6 @@ Copyright (C) 2008 Apple Inc. All Rights Reserved.
 
 #import <Availability.h>
 
-#ifdef __IPHONE_OS_VERSION_MAX_ALLOWED
-#import <UIKit/UIKit.h>			// for UIImage
-#endif
-
 #import <Foundation/Foundation.h> //	for NSObject
 
 #import "ccTypes.h"
@@ -198,9 +194,9 @@ Extensions to make it easy to create a CCTexture2D object from an image file.
 Note that RGBA type textures will have their alpha premultiplied - use the blending mode (GL_ONE, GL_ONE_MINUS_SRC_ALPHA).
 */
 @interface CCTexture2D (Image)
-/** Initializes a texture from a UIImage object */
+/** Initializes a texture from a CGImage object */
 #ifdef __IPHONE_OS_VERSION_MAX_ALLOWED
-- (id) initWithImage:(UIImage *)uiImage resolutionType:(ccResolutionType)resolution;
+- (id) initWithImage:(CGImageRef)cgImage resolutionType:(ccResolutionType)resolution;
 #elif defined(__MAC_OS_X_VERSION_MAX_ALLOWED)
 - (id) initWithImage:(CGImageRef)cgImage;
 #endif
@@ -307,8 +303,8 @@ typedef struct _ccTexParams {
 @end
 
 @interface CCTexture2D (PixelFormat)
-/** sets the default pixel format for UIImages that contains alpha channel.
- If the UIImage contains alpha channel, then the options are:
+/** sets the default pixel format for CGImages that contains alpha channel.
+ If the CGImage contains alpha channel, then the options are:
 	- generate 32-bit textures: kCCTexture2DPixelFormat_RGBA8888 (default one)
 	- generate 16-bit textures: kCCTexture2DPixelFormat_RGBA4444
 	- generate 16-bit textures: kCCTexture2DPixelFormat_RGB5A1
